test/constBlockConsuming12.slq
// args: --run

def main(){
	x:=H(0);
	y:=x;
	y:=CNOT(y,y); /// error
	forget(y);
}
